Fixed minor layout issue, Made Realtime to use the D3 es6 modules instead of some window hack. this removes the this.$d3

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -115,7 +115,7 @@ header {
 
 .wrapper{
     position: absolute;
-    top: -10px;
+    top: 50px;
     bottom: 0px;
     left: 0px;
     right:0px;
